force-app/main/default/objects/animalos__Medicine__c/animalos__Medicine__c.object-meta.xml
<CustomObject>
    <label>Medicine</label>
    <nameField>
        <label>Medicine Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Medicines</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>