force-app/main/default/objects/animalos__Medicine__c/fields/animalos__Category__c.field-meta.xml
<CustomField>
    <fullName>animalos__Category__c</fullName>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Anthelmintic</fullName>
            </value>
            <value>
                <fullName>Anti-bacterial</fullName>
            </value>
            <value>
                <fullName>Antibiotic</fullName>
            </value>
            <value>
                <fullName>Antiemetic</fullName>
            </value>
            <value>
                <fullName>AntiInflammatory</fullName>
            </value>
            <value>
                <fullName>Antimicrobial</fullName>
            </value>
            <value>
                <fullName>Antimicrobial/Anti Inflammatory</fullName>
            </value>
            <value>
                <fullName>Antimicrobial/Anti Inflammatory; Antimycotic</fullName>
            </value>
            <value>
                <fullName>Antimicrobial/Antimycotic</fullName>
            </value>
            <value>
                <fullName>Antimicrobial intramammary</fullName>
            </value>
            <value>
                <fullName>Antimicrobial intramammary/Anti Inflammatory</fullName>
            </value>
            <value>
                <fullName>Antimycotic</fullName>
            </value>
            <value>
                <fullName>Anti-parasitic</fullName>
            </value>
            <value>
                <fullName>Antiprotozoal</fullName>
            </value>
            <value>
                <fullName>Antiprotozoal anticoccidial</fullName>
            </value>
            <value>
                <fullName>Antiprotozoal coccidiostat</fullName>
            </value>
            <value>
                <fullName>Anti-seizure</fullName>
            </value>
            <value>
                <fullName>Antiseptic</fullName>
            </value>
            <value>
                <fullName>Antisera</fullName>
            </value>
            <value>
                <fullName>Cardio Vascular</fullName>
            </value>
            <value>
                <fullName>Cardio Vascular/Respiratory Agent</fullName>
            </value>
            <value>
                <fullName>Cardio Vascular ACE inhibitor</fullName>
            </value>
            <value>
                <fullName>Cardio Vascular diuretic</fullName>
            </value>
            <value>
                <fullName>Cytokine</fullName>
            </value>
            <value>
                <fullName>Decongestant</fullName>
            </value>
            <value>
                <fullName>Diagnostic Preparation</fullName>
            </value>
            <value>
                <fullName>Diluent</fullName>
            </value>
            <value>
                <fullName>Ectoparasiticide</fullName>
            </value>
            <value>
                <fullName>Emetic</fullName>
            </value>
            <value>
                <fullName>Endectocide</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>