force-app/main/default/objects/animalos__Medicine__c/fields/animalos__Consult_Type__c.field-meta.xml
<CustomField>
    <fullName>animalos__Consult_Type__c</fullName>
    <label>Consult Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>General</fullName>
            </value>
            <value>
                <fullName>Intake</fullName>
            </value>
            <value>
                <fullName>Surgical</fullName>
            </value>
            <value>
                <fullName>Black Tag Exam</fullName>
            </value>
            <value>
                <fullName>Cat/Kitten Castration</fullName>
            </value>
            <value>
                <fullName>Cat Flank Spey</fullName>
            </value>
            <value>
                <fullName>Cattle</fullName>
            </value>
            <value>
                <fullName>Community Outreach Initial Consult</fullName>
            </value>
            <value>
                <fullName>Dog/Puppy Castration</fullName>
            </value>
            <value>
                <fullName>Euthanasia - Critical Distress Consultation</fullName>
            </value>
            <value>
                <fullName>Euthanasia - General</fullName>
            </value>
            <value>
                <fullName>Euthanasia - Owner requested/Council requested</fullName>
            </value>
            <value>
                <fullName>Euthanasia - Standard protocol exit point</fullName>
            </value>
            <value>
                <fullName>Fungassay Result: POSITIVE / NEGATIVE</fullName>
            </value>
            <value>
                <fullName>Hair Matting</fullName>
            </value>
            <value>
                <fullName>Intake Check - Domestic Bird</fullName>
            </value>
            <value>
                <fullName>Intake Check - Domestic Poultry</fullName>
            </value>
            <value>
                <fullName>Intake Check - Domestic Reptile</fullName>
            </value>
            <value>
                <fullName>Intake Check - Koala</fullName>
            </value>
            <value>
                <fullName>Koala Examination</fullName>
            </value>
            <value>
                <fullName>Pathology</fullName>
            </value>
            <value>
                <fullName>Pig Clinical Exam</fullName>
            </value>
            <value>
                <fullName>Pocket Pet Intake</fullName>
            </value>
            <value>
                <fullName>Rabbit Intake</fullName>
            </value>
            <value>
                <fullName>Routine Cat and Kitten SPEY/ Pregnant cat spey</fullName>
            </value>
            <value>
                <fullName>Sheep/Goat/Alpaca</fullName>
            </value>
            <value>
                <fullName>Wildlife Examination</fullName>
            </value>
            <value>
                <fullName>General Wildlife - Bird</fullName>
            </value>
            <value>
                <fullName>General Wildlife - Amphibian</fullName>
            </value>
            <value>
                <fullName>General Wildlife - Reptile</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>