force-app/main/default/objects/animalos__Medicine__c/fields/animalos__Dosage_Amount__c.field-meta.xml
<CustomField>
    <fullName>animalos__Dosage_Amount__c</fullName>
    <label>Dosage Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>