force-app/main/default/objects/animalos__Medicine__c/fields/animalos__Dosage_Unit__c.field-meta.xml
<CustomField>
    <fullName>animalos__Dosage_Unit__c</fullName>
    <label>Dosage Unit</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Tablet</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>