force-app/main/default/objects/animalos__Medicine__c/fields/animalos__Form__c.field-meta.xml
<CustomField>
    <fullName>animalos__Form__c</fullName>
    <label>Form</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Coated - Tablet</fullName>
            </value>
            <value>
                <fullName>Dissolvable - Tablet</fullName>
            </value>
            <value>
                <fullName>Drops</fullName>
            </value>
            <value>
                <fullName>Gel</fullName>
            </value>
            <value>
                <fullName>Injected - Solution</fullName>
            </value>
            <value>
                <fullName>Ointment/Cream</fullName>
            </value>
            <value>
                <fullName>Paste</fullName>
            </value>
            <value>
                <fullName>Poultice</fullName>
            </value>
            <value>
                <fullName>Powder</fullName>
            </value>
            <value>
                <fullName>Shampoo</fullName>
            </value>
            <value>
                <fullName>Spray</fullName>
            </value>
            <value>
                <fullName>Syrup</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>