force-app/main/default/objects/animalos__Medicine__c/fields/animalos__Generic_Name__c.field-meta.xml
<CustomField>
    <fullName>animalos__Generic_Name__c</fullName>
    <label>Generic Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>