force-app/main/default/objects/animalos__Medicine__c/fields/animalos__Type__c.field-meta.xml
<CustomField>
    <fullName>animalos__Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>animalos__Treatment_Category</valueSetName>
    </valueSet>
</CustomField>