force-app/main/default/objects/animalos__Medicine__c/fields/aos_Is_Imported__c.field-meta.xml
<CustomField>
    <fullName>aos_Is_Imported__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Imported</label>
    <type>Checkbox</type>
</CustomField>