force-app/main/default/objects/animalos__Medicine__c/fields/aos_S8__c.field-meta.xml
<CustomField>
    <fullName>aos_S8__c</fullName>
    <defaultValue>false</defaultValue>
    <label>S8</label>
    <type>Checkbox</type>
</CustomField>