force-app/main/default/objects/animalos__Medicine__c/listViews/animalos__All.listView-meta.xml
<ListView>
    <fullName>animalos__All</fullName>
    <columns>NAME</columns>
    <columns>animalos__Category__c</columns>
    <columns>animalos__Generic_Name__c</columns>
    <columns>animalos__Type__c</columns>
    <columns>OBJECT_ID</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>